--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <style>
+ <!-- <style>
   body {
     background-color: #EFEFEF;
     color: #2E2F30;
@@ -44,7 +44,7 @@
     color: #666;
     box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
   }
-  </style>
+  </style> -->
 </head>
 
 <body>
